# ethical-llm-analysis

./: .env.example  .gitignore  PENTEST_REPORT.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
demos/: .dockerignore  01_prompt_injection.py  02_jailbreaking.py  03_prompt_leaking.py  04_filter_bypass.py  05_business_scenarios.py  Dockerfile  run_all_demos.sh  utils.py
llm-server/: .dockerignore  Dockerfile  requirements-full.txt  requirements.txt
llm-server/app/: main.py  model.py
notebooks/: llm_security_demo.ipynb
